[gd_scene load_steps=8 format=3 uid="uid://14knw1sb8mpu"]

[ext_resource type="Script" path="res://scenes/main_map.gd" id="1_hpxg0"]
[ext_resource type="Texture2D" uid="uid://dapnug6dua22w" path="res://assets/mainmap.png" id="1_omdlb"]
[ext_resource type="PackedScene" uid="uid://d11nep0qfx3xu" path="res://scenes/ui.tscn" id="2_ewkh1"]
[ext_resource type="Texture2D" uid="uid://bx78mr26vavlo" path="res://assets/wagon.png" id="2_jv1f4"]

[sub_resource type="Curve2D" id="Curve2D_3c7he"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 377.37, 960.986, 0, 0, 0, 0, 372.479, 906.459, 0, 0, 0, 0, 373.457, 853.915, 0, 0, 0, 0, 379.327, 806.328, 0, 0, 0, 0, 385.196, 772.621, 0, 0, 0, 0, 395.957, 729.991, 0, 0, 0, 0, 410.631, 691.326, 0, 0, 0, 0, 412.588, 643.739, 0, 0, 0, 0, 394.979, 591.195, 0, 0, 0, 0, 337, 508, 0, 0, 0, 0, 308, 463, 0, 0, 0, 0, 273, 427, 0, 0, 0, 0, 225, 380, 0, 0, 0, 0, 179, 345, 0, 0, 0, 0, 133, 310, 0, 0, 0, 0, 85.8478, 299.724, 0, 0, 0, 0, 59.4349, 273.949, 0, 0, 0, 0, 7.58697, 241.233, 0, 0, 0, 0, -32.5218, 228.345, 0, 0, 0, 0, -75.5654, 216.448, 0, 0, 0, 0, -107.848, 200.586, 0, 0, 0, 0, -162.631, 183.732, 0, 0, 0, 0, -200.783, 167.87, 0, 0, 0, 0, -236.001, 141.102, 0, 0, 0, 0, -280.022, 129.206, 0, 0, 0, 0, -341.653, 150.025, 0, 0, 0, 0, -369.044, 187.698, 0, 0, 0, 0, -415.023, 286.837, 0, 0, 0, 0, -516.412, 310.076, 0, 0, 0, 0, -617.523, 343.347, 0, 0, 0, 0, -713.393, 333.433)
}
point_count = 31

[sub_resource type="Curve2D" id="Curve2D_f7ey0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 412, 571, 0, 0, 0, 0, 465, 539, 0, 0, 0, 0, 515, 507, 0, 0, 0, 0, 561, 491, 0, 0, 0, 0, 613, 462, 0, 0, 0, 0, 665, 432, 0, 0, 0, 0, 727, 427, 0, 0, 0, 0, 767, 384, 0, 0, 0, 0, 796, 363, 0, 0, 0, 0, 884, 355, 0, 0, 0, 0, 1009, 344, 0, 0, 0, 0, 1086, 287, 0, 0, 0, 0, 1134, 223, 0, 0, 0, 0, 1123, 156, 0, 0, 0, 0, 1051, 151, 0, 0, 0, 0, 996, 183, 0, 0, 0, 0, 938, 216, 0, 0, 0, 0, 901, 231, 0, 0, 0, 0, 832, 229, 0, 0, 0, 0, 785, 206, 0, 0, 0, 0, 786, 159, 0, 0, 0, 0, 825, 117, 0, 0, 0, 0, 839, 67, 0, 0, 0, 0, 857, 27)
}
point_count = 24

[sub_resource type="Curve2D" id="Curve2D_3r0jk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 245, 361, 0, 0, 0, 0, 256, 328, 0, 0, 0, 0, 273, 284, 0, 0, 0, 0, 292, 243, 0, 0, 0, 0, 294, 199, 0, 0, 0, 0, 285, 135, 0, 0, 0, 0, 294, 92, 0, 0, 0, 0, 296, 34, 0, 0, 0, 0, 292, -14, 0, 0, 0, 0, 308, -48, 0, 0, 0, 0, 320, -93, 0, 0, 0, 0, 325, -140, 0, 0, 0, 0, 382, -244, 0, 0, 0, 0, 436, -397, 0, 0, 0, 0, 508, -495, 0, 0, 0, 0, 540, -556, 0, 0, 0, 0, 634, -585, 0, 0, 0, 0, 691, -619)
}
point_count = 18

[node name="MainMap" type="Node2D"]
script = ExtResource("1_hpxg0")

[node name="UI" parent="." instance=ExtResource("2_ewkh1")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(462, 91)
scale = Vector2(1.77469, 1.81742)
texture = ExtResource("1_omdlb")

[node name="wagonpin" type="Sprite2D" parent="."]
position = Vector2(1258, 169)
scale = Vector2(1.15591, 0.907407)
texture = ExtResource("2_jv1f4")

[node name="Camera2D" type="Camera2D" parent="wagonpin"]

[node name="turn" type="Button" parent="wagonpin"]
visible = false
offset_left = -13.8419
offset_top = -22.0408
offset_right = 27.1581
offset_bottom = 27.9592
text = "turn
"

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-8.75555, -8.32706)
scale = Vector2(1.02222, 1.00868)
curve = SubResource("Curve2D_3c7he")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_f7ey0")

[node name="Path2D3" type="Path2D" parent="."]
curve = SubResource("Curve2D_3r0jk")

[connection signal="camp_action" from="UI" to="." method="_on_ui_camp_action"]
[connection signal="move_action" from="UI" to="." method="_on_ui_move_action"]
[connection signal="button_down" from="wagonpin/turn" to="." method="_on_turn_button_down"]
